


New Config Options:

Spooky Forest at Spawn:
-Allows you to determine whether the spooky forest generates at your spawn point, or away from spawn
-Turn this option off to make the spooky forest generate away from spawn (Be warned, this might destroy parts of vanilla's or other mod's biomes, especially on small worlds)
-This option may also be helpful if you are playing with other mods that have worldgen at or nearby spawn

Screen Shaking Effect:
-Allows you to toggle the mod's screen shaking effects, in case you do not want it on for any reaso
-Was added because now a lot more stuff in the mod uses screen shaking effects
(For example, when rot-gourd shakes the screen after slamming the ground, certain weapons impacting the ground, ect)

Improved the Halloween Season Config:
-No longer requires you to leave and re-enter the world, it will now automatically be applied in game the moment you change it
-This option being turned off will not disable halloween if it is meant to normally occur (Like during october, or if you defeat the pumpkin moon's final wave)



Localization:

-This change does not really change anything gameplay wise, but it is part of tmodloader 1.4.4, and it is very helpful with localization
-Now, every single thing in spooky mod (display names, tooltips, dialogue, bestiaries, and more) is localized (As of writing this, only english localization exists in the mod)
-With tmodloader's new localization changes, anyone will now be able to translate the localization files, and send them back to me
-Once I am given back the translated localization, I can put it into the mod's files, and it will now have full support for that language



Other New Additions:

-Added old wood armor, old wood sword, and old wood bow
-Four new weapons you can get from the eye valley chests, along with craftable post-orroboro upgrades for each one
-New eye armor set, a prehardmode eye valley armor for the summon/sentry class