@@ -47,18 +47,34 @@ namespace Spooky.Content.Generation
             {
                 PositionX = Main.maxTilesX / 2;
             }
-            //otherwise place it infront of the dungeon
+            //otherwise place it nearby the dungeon
             else
             {
                 //left side dungeon
                 if (GenVars.dungeonSide == -1)
                 {
-                    PositionX = GenVars.dungeonX + (Main.maxTilesX / 15);
+                    //decide the biome position based on how far to the right the dungeon generates
+                    if (GenVars.dungeonX > (Main.maxTilesX / 9))
+                    {
+                        PositionX = GenVars.dungeonX - (Main.maxTilesX / 15);
+                    }
+                    else
+                    {
+                        PositionX = GenVars.dungeonX + (Main.maxTilesX / 15);
+                    }
                 }
                 //right side dungeon
                 else
                 {
-                    PositionX = GenVars.dungeonX - (Main.maxTilesX / 15);
+                    //decide the biome position based on how far to the left the dungeon generates
+                    if (GenVars.dungeonX < Main.maxTilesX - (Main.maxTilesX / 9))
+                    {
+                        PositionX = GenVars.dungeonX + (Main.maxTilesX / 15);
+                    }
+                    else
+                    {
+                        PositionX = GenVars.dungeonX - (Main.maxTilesX / 15);
+                    }
                 }
             }
 
