@@ -31,7 +31,7 @@ namespace Spooky.Content.Tiles.SpookyBiome.Furniture
 			TileObjectData.newTile.LavaDeath = true;
 			TileObjectData.newTile.DrawYOffset = 0;
 			TileObjectData.addTile(Type);
-            AddMapEntry(new Color(86, 64, 33));
+            AddMapEntry(new Color(96, 74, 43));
             ItemDrop = ModContent.ItemType<OldWoodPlatformItem>();
 			DustType = DustID.WoodFurniture;
 			AddToArray(ref TileID.Sets.RoomNeeds.CountsAsDoor);
