@@ -23,7 +23,7 @@ Massive thanks to all the people who have helped out the mod in some way, or are
 Thanks to Renk, Graydee, and Lemmy for their help with coding
 Thanks to Seasalt, Hugekraken, Taco, HondaCivicMoment, Waasephi, Heart Plus Up, and Soft for contributing awesome sprites
 Thanks to Bananalizard for composing the mod's amazing OST, as well as some other awesome soundtracks by Rockwizard5 and LuxCapacitor
-Thanks to Hat in a River for making a bunch of awesome concept art
+Thanks to Hat in a River for making a bunch of awesome concept art, as well as a lot of other art (such as the new menu background used for this update!)
 Thanks to Jim2OUK for building some of the cool structures you'll find in the mod
 
 And of course, thanks to everyone else who has supported the mod or shown interest in any way!
